--- a/src/components/Shopcart.module.css
+++ b/src/components/Shopcart.module.css
@@ -44,10 +44,20 @@
 .checkoutBtn {
     border: none;
     outline: none;
-    background-color: rgb(15, 141, 15);
-    color: white;
+    background-color: #34a853;
+    color: #fff;
     padding: 7px 15px;
     border-radius: 5px;
+    display: inline-block;
+    transition: all 0.2s ease;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+    rgba(0, 0, 0, 0.07) 0px 9px 16px;
+}
+
+.checkoutBtn:hover{
+  background-color: #167d32;
+
 }
 
 .clearBtn {
