--- a/src/components/shared/Product.module.css
+++ b/src/components/shared/Product.module.css
@@ -1,3 +1,7 @@
+.btn:hover{
+    background: rgb(36, 36, 199) !important; 
+}
+
 .btn:focus {
     outline: none !important;
     outline-offset: none !important;
@@ -5,4 +9,16 @@
 
 .btn{
     margin: 0 4px;
+}
+
+.btn2{
+    font-size: 12px !important;
+}
+.btn2:hover{
+    background: rgb(36, 36, 199) !important; 
+
+}
+.size{
+    font-size: 13px !important;
+    text-decoration: none;
 }
