--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -7,6 +7,11 @@
     border: 1px solid silver;
     background-color: #fff;
     border-radius: 10px;
+    overflow: hidden;
+  }
+
+  .imageContainer{
+    /* overflow: hidden; */
   }
   
   .image {
